# HabrMissedFilters

./: .gitignore  Makefile  README.md  pyproject.toml
Infra/GitSyntax/: Commits.sh  commit-msg  pre-push
Source/: main.py
Source/Modules/Article/: create.py
Source/Modules/Compare/: __init__.py  includesOneOfPartially.py  isInRange.py
Source/Modules/Display/: __init__.py  toCSV.py
Source/Modules/Habr/HabrArticle/: __init__.py  create.py  fromDom.py
Source/Modules/Habr/HabrPost/: __init__.py  getText.py
Source/Modules/Habr/HabrSearch/: __init__.py  getNextPageURL.py  getPosts.py
Source/Modules/Habr/HabrSearchPost/: __init__.py  getAuthor.py  getDate.py  getPreview.py  getRating.py  getTags.py  getTitle.py  getURL.py
Source/Modules/Habr/HabrURL/: __init__.py  domain.py  getSearchPageURL.py
Source/Modules/Log/: __init__.py  out.py
Source/Modules/Page/: __init__.py  completeURL.py  load.py  wrap.py
